[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Babylon"
authors = [{ name = "Mohcine Tor", email = "mohcine.tor@cosmotech.com" },
           { name = "Diamantis Sellis", email = "diamantis.sellis@cosmotech.com"}]
description = "A CLI made to simplify the deployment and management of the CosmoTech Platform and Solutions"
dependencies = [
  "azure-identity",
  "azure-mgmt-storage",
  "azure-storage-blob",
  "hvac",
  "click",
  "click-log",
  "cryptography",
  "pyyaml",
  "requests==2.31.0",
  "jmespath",
  "rich",
  "GitPython",
  "Mako",
  "polling2",
  "inquirer",
  "flatten_json",
  "dynaconf",
  "azure-mgmt-authorization>=4.0.0",
  "azure-containerregistry>=1.2.0",
]
dynamic = ["version"]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
license = "MIT"

[dependency-groups]
dev = [
  "ruff>=0.14.5",
  "pytest",
]
doc = [
  "mkdocs",
  "mkdocs-click",
  "mkdocs-gen-files",
  "mkdocs-material",
  "mkdocstrings[python]",
  "mike",
  "pymdown-extensions",
  "requirements-parser",
]

[tool.hatch.envs.default]
installer = "uv"

[project.urls]
Homepage = "https://www.cosmotech.com"
Source = "https://github.com/Cosmo-Tech/Babylon"
Documentation = "https://cosmo-tech.github.io/Babylon/latest/"

[project.scripts]
babylon = "Babylon.main:main"

[tool.hatch.version]
path = "Babylon/version.py"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]